--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,9 +1,9 @@
 #-------------------------------
 # General Site Settings
 
-title: Artists Theme
-description: Thinker // Designer // YouTuber
-email: devtipsfordesigners@gmail.com
+title: Nik Steel
+description: Software Developer // Audio Engineer
+email: steeln@uwindsor.ca
 
 # NOTE: The Logo and Background image are defined in the all.sass document.
 
@@ -19,9 +19,9 @@ menu:
 # NOTE: Providing SEO information will make this website more searchable on the internet.
 
 seo:
-  description: 'Provide a description for your website to make it visible to search engines.'
-  rel-author: 'https://plus.google.com/u/0/+DevTipsForDesigners/'
-  rel-publisher: 'https://plus.google.com/u/0/+DevTipsForDesigners/'
+  description: 'Nik is a freelance software developer with audio engineering expertise.'
+  rel-author: 'https://plus.google.com/u/0/+niksteel/'
+  rel-publisher: 'https://plus.google.com/u/0/+niksteel/'
 
 #-------------------------------
 # Google Analytics Section
@@ -39,21 +39,24 @@ seo:
 # NOTE: The avatar is defined in the all.sass document.
 
 blurb: >
-  **Travis specializes in making things** for human people.
-  Most of the things he makes are [digital interfaces](http://travisneilson.com){:target="_blank"},
-  but he also puts effort into crafting [next-level beats](http://soundcloud.com/travis-neilson){:target="_blank"}
-  and [YouTube videos](http://youtube.com/user/devtipsfordesigners){:target="_blank"} about making codes happen.
+  **Nik is a creative problem solver** with a passion for making life easy.
+  He presently volunteers at [Hackforge](http://hackf.org/){:target="_blank"}, a maker spacer in Windsor, where he helped introduce kids to 
+  the [physics of sound](https://youtu.be/aO8OiT28mew?list=PLK85ZLdkWlf9xbErDN42zK4v6b1Sabhl_){:target:"_blank"}, 
+  topics in artificial intelligence, and fun, technology-inspired crafts projects.
+  As he launches his career in software development, he is seeking opportunities to contribute to technology
+  projects of any size or budget.  His uniquely diverse history in audio engineering, music, and the visual arts
+  are an asset for brainstorming and collaborating with creative professionals.
 
 
 skills:
-- {name: Communication, value: '9'}
-- {name: Organization, value: '7'}
+- {name: Communication, value: '8'}
+- {name: Leadership, value: '8'}
 - {name: Learning, value: '10'}
-- {name: Teaching, value: '6'}
-- {name: Planning, value: '7'}
-- {name: Visual Design, value: '5'}
-- {name: UX Design, value: '8'}
-- {name: Programming, value: '6'}
+- {name: Teaching, value: '7'}
+- {name: Team Work, value: '10'}
+- {name: C / C++, value: '9'}
+- {name: HTML5 / CSS3 / Javascript, value: '6'}
+- {name: Acoustics, value: '9'}
 
 #-------------------------------
 # Work Section
@@ -101,11 +104,12 @@ clients:
 # Contact Section
 
 social:
-- {icon: 'twitter', link: 'http://twitter.com/devtipsshow'}
-- {icon: 'dribbble', link: 'https://dribbble.com/travisneilson'}
-- {icon: 'behance', link: 'https://www.behance.net/travisneilson'}
-- {icon: 'youtube', link: 'https://www.youtube.com/DevTipsForDesigners'}
-- {icon: 'linkedin', link: 'http://www.linkedin.com/in/travisneilson/'}
+- {icon: 'github', link: 'https://github.com/niksteel'}
+- {icon: 'twitter', link: 'https://twitter.com/nik_steel'}
+- {icon: 'google-plus', link: 'https://google.com/+niksteel'}
+- {icon: 'facebook', link: 'https://www.facebook.com/nik.steel'}
+- {icon: 'linkedin', link: 'https://www.linkedin.com/in/niksteel'}
+- {icon: 'youtube', link: 'https://www.youtube.com/c/niksteel'}
 
 
 # social network icons available: 'twitter' / 'facebook' / 'github' / 'pinterest' 'google-plus' / 'linkedin' / 'youtube' / 'instagram' / 'dribbble' / 'behance' / 'soundcloud' / 'vine'
