Revert "refactor clients to testimonials"
This reverts commit 4c6027b43e5a76d38125834ed0905026f62e90d6.

Undo refactoring

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -10,7 +10,7 @@ email: nikolassteel@gmail.com
 menu:
 - {name: About Me, url: '#about-me'}
 - {name: Work, url: '#work'}
-- {name: Testimonials, url: '#testimonials'}
+- {name: Clients, url: '#clients'}
 - {name: Contact, url: '#contact'}
 
 #-------------------------------
@@ -75,9 +75,9 @@ projects:
 
 
 #-------------------------------
-# Testimonials Section
+# Clients Section
 
-testimonials:
+clients:
 - {avatar: 'face-doug.jpg',
   name: 'Doug Sartori',
   title: 'Hackforge President',
