maker spacer typo fixed

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -40,7 +40,7 @@ seo:
 
 blurb: >
   **Nik is a creative problem solver.**
-  He presently volunteers at [Hackforge](http://hackf.org/){:target="_blank"}, a maker spacer in Windsor, where he has introduced kids to 
+  He presently volunteers at [Hackforge](http://hackf.org/){:target="_blank"}, a maker space in Windsor, where he has introduced kids to 
   the [physics of sound](https://youtu.be/aO8OiT28mew?list=PLK85ZLdkWlf9xbErDN42zK4v6b1Sabhl_){:target="_blank"}, 
   topics in artificial intelligence, and fun, technology-inspired crafts projects.
   As he launches his career in software development, he is seeking opportunities to contribute to technology
