--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -66,16 +66,13 @@ projects:
 - {name: City-IN website concept, folder: 'proj-2', file: 'work/proj-2.html'}
 - {name: Crispy Icons, folder: 'proj-3', file: 'work/proj-3.html'}
 - {name: Flat Mobile UI/UX Concept, folder: 'proj-4', file: 'work/proj-4.html'}
-- {name: Fresh It Up, folder: 'proj-5', file: 'work/proj-5.html'}
-- {name: Timeline Page, folder: 'proj-6', file: 'work/proj-6.html'}
-- {name: Weather Dashboard, folder: 'proj-7', file: 'work/proj-7.html'}
-- {name: Stripes & Co, folder: 'proj-8', file: 'work/proj-8.html'}
+
 
 
 
 
 #-------------------------------
-# Clients Section
+# Testimonials Section
 
 clients:
 - {avatar: 'face-doug.jpg',
@@ -97,7 +94,6 @@ social:
 - {icon: 'github', link: 'https://github.com/niksteel'}
 - {icon: 'twitter', link: 'https://twitter.com/nik_steel'}
 - {icon: 'google-plus', link: 'https://google.com/+niksteel'}
-- {icon: 'facebook', link: 'https://www.facebook.com/nik.steel'}
 - {icon: 'linkedin', link: 'https://www.linkedin.com/in/niksteel'}
 - {icon: 'youtube', link: 'https://www.youtube.com/c/niksteel'}
 
