--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -19,7 +19,11 @@ menu:
 # NOTE: Providing SEO information will make this website more searchable on the internet.
 
 seo:
+  name: 'Nik Steel'
+  job: 'Software Developer'
   description: 'Nik is an emerging software developer with audio engineering expertise.'
+  image: 'https://niksteel.com/assets/img/nikitar.jpg'
+  url: 'https://niksteel.com'
   rel-author: 'https://plus.google.com/u/0/+niksteel/'
   rel-publisher: 'https://plus.google.com/u/0/+niksteel/'
 
