--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -40,7 +40,7 @@ seo:
 
 # NOTE: If you want to use Google Analytics for basic web tracking: Just uncomment and enter your UA-Code here.
 
-#google-analytics-ua: UA-XXXXXX-X
+google-analytics-ua: UA-65949034-1
 
 #-------------------------------
 # About Section
